# num

./: .envrc  .gitignore  .multirust.sh  .rustup.sh  .travis.yml  Cargo.toml  Makefile  README.md  RELEASES.md  bors.toml  search-index.js
.github/workflows/: ci.yaml  master.yaml  pr.yaml
.travis/: deploy.sh  test_features.sh  test_nightly.sh
benches/: bigint.rs  shootout-pidigits.rs
bigdecimal/: Cargo.toml
bigdecimal/src/: lib.rs
bigint/: Cargo.toml  build.rs
bigint/src/: algorithms.rs  bigint.rs  biguint.rs  lib.rs  macros.rs  monty.rs  quickcheck_impls.rs
bigint/src/tests/: bigint.rs  biguint.rs
ci/: rustup.sh  test_full.sh
complex/: Cargo.toml
complex/src/: lib.rs  quickcheck_impls.rs  scalar.rs
derive/: Cargo.toml
derive/src/: lib.rs
derive/tests/: compiletest.rs  empty_enum.rs  trivial.rs  with_custom_values.rs
derive/tests/compile-fail/: derive_on_struct.rs  enum_with_associated_data.rs
doc/: after.html  header.html  index.html
integer/: Cargo.toml
integer/src/: lib.rs
iter/: Cargo.toml
iter/src/: lib.rs
libc/: constant.ABDAY_1.html  constant.ABDAY_2.html  constant.ABDAY_3.html  constant.ABDAY_4.html  constant.ABDAY_5.html  constant.ABDAY_6.html  constant.ABDAY_7.html  constant.ABMON_1.html  constant.ABMON_10.html  constant.ABMON_11.html  constant.ABMON_12.html  constant.ABMON_2.html  constant.ABMON_3.html  constant.ABMON_4.html  constant.ABMON_5.html  constant.ABMON_6.html  constant.ABMON_7.html  constant.ABMON_8.html  constant.ABMON_9.html  constant.ACCOUNTING.html  constant.ADFS_SUPER_MAGIC.html  constant.AFFS_SUPER_MAGIC.html  constant.AF_IB.html  constant.AF_MPLS.html  constant.AF_NFC.html  constant.AF_VSOCK.html  constant.AIO_ALLDONE.html  constant.AIO_CANCELED.html  constant.AIO_NOTCANCELED.html  constant.AI_ADDRCONFIG.html  constant.AI_ALL.html  constant.AI_CANONNAME.html  constant.AI_NUMERICHOST.html  constant.AI_NUMERICSERV.html  constant.AI_PASSIVE.html  constant.AI_V4MAPPED.html  constant.ALT_DIGITS.html  constant.AM_STR.html  constant.BOOT_TIME.html  constant.BUFSIZ.html  (+1299 more)
macros/: Cargo.toml
macros/src/: lib.rs
macros/tests/: empty_enum.rs  test_macro.rs  trivial.rs  with_custom_values.rs
macros/tests/compile-fail/: derive_on_struct.rs  enum_with_associated_data.rs
num/: fn.abs.html  fn.abs_sub.html  fn.checked_pow.html  fn.clamp.html  fn.one.html  fn.range.html  fn.range_inclusive.html  fn.range_step.html  fn.range_step_inclusive.html  fn.signum.html  fn.zero.html  index.html  sidebar-items.js  struct.BigInt.html  struct.BigUint.html  struct.Complex.html  trait.Bounded.html  trait.CheckedAdd.html  trait.CheckedDiv.html  trait.CheckedMul.html  trait.CheckedSub.html  trait.Float.html  trait.FromPrimitive.html  trait.Integer.html  trait.Num.html  trait.NumCast.html  trait.One.html  trait.PrimInt.html  trait.Saturating.html  trait.Signed.html  trait.ToPrimitive.html  trait.Unsigned.html  trait.Zero.html  type.BigRational.html  type.Rational.html
num-macros/: Cargo.toml
num-macros/src/: lib.rs
num/bigint/: index.html
num/cast/: fn.cast.html  index.html  trait.FromPrimitive.html  trait.NumCast.html  trait.ToPrimitive.html
num/complex/: index.html
num/integer/: index.html
num/iter/: index.html
num/pow/: fn.checked_pow.html  fn.pow.html  index.html
num/rational/: index.html
num/traits/: index.html
num_bigint/: constant.ZERO_BIG_DIGIT.html  enum.ParseBigIntError.html  enum.Sign.html  index.html  struct.BigInt.html  struct.BigUint.html  trait.RandBigInt.html  trait.ToBigInt.html  trait.ToBigUint.html  type.BigDigit.html  type.DoubleBigDigit.html
num_bigint/big_digit/: constant.BASE.html  constant.BITS.html  constant.ZERO_BIG_DIGIT.html  fn.from_doublebigdigit.html  fn.to_doublebigdigit.html  index.html  type.BigDigit.html  type.DoubleBigDigit.html
num_complex/: index.html  struct.Complex.html  struct.ParseComplexError.html  type.Complex32.html  type.Complex64.html
num_integer/: fn.binomial.html  fn.div_floor.html  fn.div_mod_floor.html  fn.div_rem.html  fn.gcd.html  fn.lcm.html  fn.mod_floor.html  fn.multinomial.html  index.html  struct.IterBinomial.html  trait.Integer.html
num_iter/: fn.range.html  fn.range_inclusive.html  fn.range_step.html  fn.range_step_inclusive.html  index.html  struct.Range.html  struct.RangeInclusive.html  struct.RangeStep.html  struct.RangeStepInclusive.html
num_macros/: Cargo.toml
num_macros/src/: lib.rs
num_rational/: index.html  struct.ParseRatioError.html  struct.Ratio.html  type.BigRational.html  type.Rational.html  type.Rational32.html  type.Rational64.html
num_traits/: enum.FloatErrorKind.html  fn.clamp.html  index.html  struct.ParseFloatError.html  trait.Num.html  trait.NumAssign.html  trait.NumAssignOps.html  trait.NumAssignRef.html  trait.NumOps.html  trait.NumRef.html  trait.RefNum.html
num_traits/bounds/: index.html  trait.Bounded.html
num_traits/cast/: fn.cast.html  index.html  trait.FromPrimitive.html  trait.NumCast.html  trait.ToPrimitive.html
num_traits/float/: index.html  trait.Float.html  trait.FloatConst.html
num_traits/identities/: fn.one.html  fn.zero.html  index.html  trait.One.html  trait.Zero.html
num_traits/int/: index.html  trait.PrimInt.html
num_traits/ops/: index.html
num_traits/pow/: fn.checked_pow.html  fn.pow.html  (+1 more)
rand/: fn.random.html  fn.sample.html  fn.thread_rng.html  fn.weak_rng.html  index.html  struct.AsciiGenerator.html  struct.Closed01.html  struct.Generator.html  struct.Open01.html  struct.StdRng.html  struct.ThreadRng.html  struct.XorShiftRng.html  trait.Rand.html  trait.Rng.html  trait.SeedableRng.html
rational/: Cargo.toml
rational/src/: lib.rs  quickcheck_impls.rs
rustc_serialize/: index.html  trait.Decodable.html  trait.Decoder.html  trait.DecoderHelpers.html  trait.Encodable.html  trait.Encoder.html  trait.EncoderHelpers.html
src/: bigint.rs  complex.rs  integer.rs  iter.rs  lib.rs  rational.rs  saturating.rs  traits.rs
traits/: Cargo.toml
traits/src/: bounds.rs  cast.rs  float.rs  identities.rs  int.rs  lib.rs  pow.rs  sign.rs
traits/src/ops/: checked.rs  saturating.rs  wrapping.rs
(+189 files in other folders)
