[package]
authors = ["The Rust Project Developers"]
description = "A collection of numeric types and traits for Rust, including bigint,\ncomplex, rational, range iterators, generic integers, and more!\n"
documentation = "https://docs.rs/num"
homepage = "https://github.com/rust-num/num"
keywords = ["mathematics", "numerics", "bignum"]
categories = [ "algorithms", "data-structures", "science", "no-std" ]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-num/num"
name = "num"
version = "0.4.0"
readme = "README.md"
exclude = ["/bors.toml", "/ci/*", "/.github/*"]
edition = "2018"

[package.metadata.docs.rs]
features = ["std", "serde", "rand"]

[badges]
travis-ci = { repository = "rust-num/num" }

[dependencies]

[dependencies.num-bigint]
optional = true # needs std until Rust 1.36
version = "0.4.0"
default-features = false

[dependencies.num-complex]
version = "0.4.0"
default-features = false

[dependencies.num-integer]
version = "0.1.44"
default-features = false
features = ["i128"]

[dependencies.num-iter]
version = "0.1.42"
default-features = false
features = ["i128"]

[dependencies.num-rational]
version = "0.4.0"
default-features = false

[dependencies.num-traits]
version = "0.2.14"
default-features = false
features = ["i128"]

[dev-dependencies]

[features]
default = ["std"]

std = [
  "num-bigint/std",
  "num-complex/std",
  "num-integer/std",
  "num-iter/std",
  "num-rational/std", "num-rational/num-bigint-std",
  "num-traits/std",
]

alloc = ["num-bigint", "num-rational/num-bigint"]

libm = [
  "num-complex/libm",
  "num-traits/libm",
]

rand = [
  "num-bigint/rand",
  "num-complex/rand",
]

serde = [
  "num-bigint/serde",
  "num-complex/serde",
  "num-rational/serde",
]
