[package]
authors = ["The Rust Project Developers"]
description = "Big integer implementation for Rust"
documentation = "http://rust-num.github.io/num"
homepage = "https://github.com/rust-num/num"
keywords = ["mathematics", "numerics"]
license = "MIT/Apache-2.0"
name = "num-bigint"
repository = "https://github.com/rust-num/num"
version = "0.1.37"

[dependencies]

[dependencies.num-integer]
path = "../integer"
version = "0.1.32"

[dependencies.num-traits]
path = "../traits"
version = "0.1.32"

[dependencies.rand]
optional = true
version = "0.3.14"

[dependencies.rustc-serialize]
optional = true
version = "0.3.19"

[dependencies.serde]
optional = true
version = ">= 0.7.0, < 0.9.0"

[features]
default = ["rand", "rustc-serialize"]
