[package]
authors = ["The Rust Project Developers"]
description = "Big integer implementation for Rust"
documentation = "http://rust-num.github.io/num"
homepage = "https://github.com/rust-num/num"
keywords = ["mathematics", "numerics", "bignum"]
categories = [ "algorithms", "data-structures", "science" ]
license = "MIT/Apache-2.0"
name = "num-bigint"
repository = "https://github.com/rust-num/num"
version = "0.2.0-git"
publish = false

[dependencies]

[dependencies.num-integer]
path = "../integer"
version = "0.2.0-git"

[dependencies.num-traits]
path = "../traits"
version = "0.2.0-git"

[dependencies.rand]
optional = true
version = "0.3.14"

[dependencies.serde]
optional = true
version = "1"

[dev-dependencies.rand]
version = "0.3.14"

[features]
default = ["rand"]
