[package]
authors = ["The Rust Project Developers"]
description = "Big integer implementation for Rust"
documentation = "http://rust-num.github.io/num"
homepage = "https://github.com/rust-num/num"
keywords = ["mathematics", "numerics", "bignum"]
categories = [ "algorithms", "data-structures", "science" ]
license = "MIT/Apache-2.0"
name = "num-bigint"
repository = "https://github.com/rust-num/num"
version = "0.1.41"

build = "build.rs"

[dependencies]

[dependencies.num-integer]
path = "../integer"
version = "0.1.32"

[dependencies.num-traits]
path = "../traits"
version = "0.1.32"

[dependencies.rand]
optional = true
version = "0.3.14"

[dependencies.rustc-serialize]
optional = true
version = "0.3.19"

[dependencies.serde]
optional = true
version = ">= 0.7.0, < 0.9.0"

# FIXME: Remove this dependency, corresponding entry in build.rs and
#        related #[cfg(...)] after bumping minimum Rust to >= 1.12.0
[build-dependencies.rustc_version]
version = "0.1.7"

[dev-dependencies.rand]
version = "0.3.14"

# FIXME: same notes as for `rustc_version`
[dev-dependencies.semver]
version = "0.1.20"

[features]
default = ["rand", "rustc-serialize"]
