[package]
authors = ["The Rust Project Developers"]
description = "Complex numbers implementation for Rust"
documentation = "http://rust-num.github.io/num"
homepage = "https://github.com/rust-num/num"
keywords = ["mathematics", "numerics"]
license = "MIT/Apache-2.0"
repository = "https://github.com/rust-num/num"
name = "num-complex"
version = "0.1.0"

[dependencies]

[dependencies.num-traits]
optional = false
path = "../traits"
