[package]
authors = ["The Rust Project Developers"]
description = "Complex numbers implementation for Rust"
documentation = "http://rust-num.github.io/num"
homepage = "https://github.com/rust-num/num"
keywords = ["mathematics", "numerics"]
license = "MIT/Apache-2.0"
name = "num-complex"
repository = "https://github.com/rust-num/num"
version = "0.1.37"

[dependencies]

[dependencies.num-traits]
optional = false
path = "../traits"
version = "0.1.32"

[dependencies.rustc-serialize]
optional = true
version = "0.3.19"

[dependencies.serde]
optional = true
version = ">= 0.7.0, < 0.9.0"

[features]
default = ["rustc-serialize"]
unstable = []
