[package]
authors = ["The Rust Project Developers"]
description = "Complex numbers implementation for Rust"
documentation = "http://rust-num.github.io/num"
homepage = "https://github.com/rust-num/num"
keywords = ["mathematics", "numerics"]
categories = [ "algorithms", "data-structures", "science" ]
license = "MIT/Apache-2.0"
name = "num-complex"
repository = "https://github.com/rust-num/num"
version = "0.2.0-git"
publish = false

[dependencies]

[dependencies.num-traits]
optional = false
path = "../traits"
version = "0.2.0-git"

[dependencies.serde]
optional = true
version = "1"

[features]
default = []
unstable = []
