[package]
authors = ["The Rust Project Developers"]
description = "External iterators for generic mathematics"
documentation = "http://rust-num.github.io/num"
homepage = "https://github.com/rust-num/num"
keywords = ["mathematics", "numerics"]
license = "MIT/Apache-2.0"
repository = "https://github.com/rust-num/num"
name = "num-iter"
version = "0.2.0-git"
publish = false

[dependencies]

[dependencies.num-integer]
optional = false
path = "../integer"
version = "0.2.0-git"

[dependencies.num-traits]
optional = false
path = "../traits"
version = "0.2.0-git"
