[package]
name = "num-macros"
version = "0.1.24"
authors = ["The Rust Project Developers"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/rust-lang/num"
repository = "https://github.com/rust-lang/num"
documentation = "http://doc.rust-lang.org/num"
keywords = ["mathematics", "numerics"]
description = """
Numeric syntax extensions.
"""

[lib]
name = "num_macros"
plugin = true

[dev-dependencies]
num = { path = "..", version = "*" }
