[package]
name = "num-macros"
version = "0.1.29"
authors = ["The Rust Project Developers"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/rust-num/num"
repository = "https://github.com/rust-num/num"
documentation = "http://rust-num.github.io/num"
keywords = ["mathematics", "numerics"]
description = """
Numeric syntax extensions.
"""

[lib]
name = "num_macros"
plugin = true

[dev-dependencies]
num = { path = "..", version = "0.1" }
