[package]
authors = ["The Rust Project Developers"]
description = "Rational numbers implementation for Rust"
documentation = "http://rust-num.github.io/num"
homepage = "https://github.com/rust-num/num"
keywords = ["mathematics", "numerics"]
license = "MIT/Apache-2.0"
name = "num-rational"
repository = "https://github.com/rust-num/num"
version = "0.1.0"

[dependencies]

[dependencies.num-bigint]
optional = true
path = "../bigint"

[dependencies.num-integer]
path = "../integer"

[dependencies.num-traits]
path = "../traits"

[dependencies.rustc-serialize]
optional = true
version = "0.3.19"

[dependencies.serde]
optional = true
version = "0.7.0"

[features]
default = ["bigint", "rustc-serialize"]
bigint = ["num-bigint"]
