[package]
authors = ["The Rust Project Developers"]
description = "Rational numbers implementation for Rust"
documentation = "http://rust-num.github.io/num"
homepage = "https://github.com/rust-num/num"
keywords = ["mathematics", "numerics"]
license = "MIT/Apache-2.0"
name = "num-rational"
repository = "https://github.com/rust-num/num"
version = "0.2.0-git"
publish = false

[dependencies]

[dependencies.num-bigint]
optional = true
path = "../bigint"
version = "0.2.0-git"

[dependencies.num-integer]
path = "../integer"
version = "0.2.0-git"

[dependencies.num-traits]
path = "../traits"
version = "0.2.0-git"

[dependencies.serde]
optional = true
version = "1"

[features]
default = ["bigint"]
bigint = ["num-bigint"]
