[package]
name = "num-traits"
version = "0.1.0"
authors = ["The Rust Project Developers"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/rust-num/num"
repository = "https://github.com/rust-num/num"
documentation = "http://rust-num.github.io/num"
keywords = ["mathematics", "numerics", "traits"]
description = """
A collection of traits for Rust, including implementations on Rust's built-in
numeric types.
"""
